tela de login com table criada

--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
 
 	</head>
 	<body>
-
+		<table>
+			<tr>
+				<td>Usuario</td>
+				<td><input type="text"/></td>
+			</tr>
+			<tr>
+				<td>Senha</td>
+				<td><input type="text"/></td>
+			</tr>
+			<tr>
+				<td colspan="2"><button>Acessar</button></td>
+			</tr>
+		</table>
 	</body>
 </html>
